# EmbeddedSystems-Learning

./: .gitignore  README.md
Drivers/: README.md
InterviewPrep/: arr_of_func_ptrs.c  bit_manip.c  bitfield_struct.c  func_pointers.c  insertion_sort.c  pointer_memory.c  ring_buffer.c  ring_buffer.cpp
InterviewPrep/python/: analyze.py  basic_csv_parse.py  config.txt  level_2.py  logs.txt  parse_config.py  performance_log.csv  scores.csv
InterviewPrep/questions/: bit_count.c  bit_count.h  checksum.c  checksum.h  detect_duplicates.c  detect_duplicates.h  endian_conversion.c  endian_conversion.h  log.csv  merge_streams.c  merge_streams.h  packet_scheduler.c  packet_scheduler.h  parse_logs.py  register_sim.c  register_sim.h  reverse_bits.c  reverse_bits.h  shuffle.c  shuffle.h  sliding_window_max.c  sliding_window_max.h  test_parse_logs.py
InterviewPrep/tests/: test_bit_count.c  test_checksum.c  test_cycle_detection.c  test_detect_duplicates.c  test_endian_conversion.c  test_fixed_point.c  test_int_binary.c  test_merge_streams.c  test_packet_scheduler.c  test_register_sim.c  test_reverse_bits.c  test_shuffle.c  test_sliding_window_max.c
esp_projects/blinky/main/: blinky.c
esp_projects/button_intrpt/: CMakeLists.txt
esp_projects/dht11/: CMakeLists.txt
langs/C/: complex_val.c  thread_example.c
langs/CPP/learncpp/stack_queue/: .CMakeLists.txt.un~  CMakeLists.txt  Makefile
langs/CPP/learncpp/stack_queue/include/: .container.hpp.un~  .stack.hpp.un~  container.hpp  stack.hpp
langs/CPP/learncpp/stack_queue/src/: .main.cpp.un~  .src.cpp.un~  main.cpp
(+116 files in other folders)
